# CaPTk2.0

Applications/: AppList.cmake
Applications/CaptkApp/: CMakeLists.txt  target_libraries.cmake
CMake/: CaPTkInstallRules.cmake  FindJsonCpp.cmake
CMake/PackageDepends/: FindYamlCpp.cmake  MITK_JsonCpp_Config.cmake  MITK_YamlCpp_Config.cmake
CMakeExternals/: CaPTkData.cmake  ExternalProjectList.cmake  JsonCpp.cmake  YamlCpp.cmake  YamlCppCMakeLists.txt
Modules/: ModuleList.cmake
Modules/CaPTkCommon/: CMakeLists.txt  files.cmake
Modules/CaPTkCommon/cmdapps/: CMakeLists.txt  CaPTkTestPropertiesCmdApp.cpp
Modules/CaPTkCommon/include/: CaPTkGetModalityAndDescription.h  CaPTkItkAdaptiveGeodesicDistanceFilter.h  CaPTkItkAdaptiveGeodesicDistanceFilter.hxx
Modules/CaPTkCommon/src/: CaPTkGetModalityAndDescription.cpp
Modules/CaPTkCommon/test/: CMakeLists.txt  CaPTkItkAdaptiveGeodesicDistanceFilterTest.cpp  files.cmake
Modules/CaPTkInteractiveSegmentationModule/: CMakeLists.txt  files.cmake
Modules/CaPTkLegacyCommon/: files.cmake
Modules/CaPTkPseudoProgression/: CMakeLists.txt  README.md  files.cmake
Modules/CaPTkPseudoProgression/cmdapps/: CMakeLists.txt  CaPTkPseudoProgressionPredictionCmdApp.cpp
Modules/CaPTkPseudoProgression/include/: CaPTkPseudoProgression.h  (+3 more)
Modules/CaPTkRecurrence/: CMakeLists.txt  README.md  files.cmake
Plugins/: PluginList.cmake
Plugins/org.mitk.gui.qt.captkinteractivesegmentation/: CMakeLists.txt
Plugins/upenn.cbica.captk.brain.recurrence/: CMakeLists.txt  README.md  files.cmake  manifest_headers.cmake  plugin.xml
(+38 files in other folders)
